--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -72,278 +72,79 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-QTd_1cWswX2",
-        "outputId": "3e5799e9-0350-4656-c878-94ab939e5182"
+        "id": "-QTd_1cWswX2"
       },
       "source": [
         "sal.info()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 125322 entries, 0 to 125321\n",
-            "Data columns (total 13 columns):\n",
-            " #   Column            Non-Null Count   Dtype  \n",
-            "---  ------            --------------   -----  \n",
-            " 0   Id                125322 non-null  int64  \n",
-            " 1   EmployeeName      125322 non-null  object \n",
-            " 2   JobTitle          125322 non-null  object \n",
-            " 3   BasePay           124717 non-null  float64\n",
-            " 4   OvertimePay       125322 non-null  float64\n",
-            " 5   OtherPay          125322 non-null  float64\n",
-            " 6   Benefits          89163 non-null   float64\n",
-            " 7   TotalPay          125322 non-null  float64\n",
-            " 8   TotalPayBenefits  125321 non-null  float64\n",
-            " 9   Year              125321 non-null  float64\n",
-            " 10  Notes             0 non-null       float64\n",
-            " 11  Agency            125321 non-null  object \n",
-            " 12  Status            14790 non-null   object \n",
-            "dtypes: float64(8), int64(1), object(4)\n",
-            "memory usage: 12.4+ MB\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wf2ErVYSszlH",
-        "outputId": "e6448ab2-6bb2-4a64-e56d-e9b82b54bbb1"
+        "id": "wf2ErVYSszlH"
       },
       "source": [
         "sal['BasePay'].mean()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "71374.75264304064"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DWfLxh9CtZtv",
-        "outputId": "ecca263a-c1f1-42af-d697-aa00221e811e"
+        "id": "DWfLxh9CtZtv"
       },
       "source": [
         "sal[sal['EmployeeName'] == 'JOSEPH DRISCOLL']['JobTitle']"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "24    CAPTAIN, FIRE SUPPRESSION\n",
-              "Name: JobTitle, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EMjlyjz3t2in",
-        "outputId": "4dd89ae7-55d1-421a-f5df-0e9048df6a44"
+        "id": "EMjlyjz3t2in"
       },
       "source": [
         "sal[sal['EmployeeName'] == 'JOSEPH DRISCOLL']['TotalPayBenefits']"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "24    270324.91\n",
-              "Name: TotalPayBenefits, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 168
-        },
-        "id": "bKxwMFLHt96H",
-        "outputId": "c3490b0a-c8c8-4a3f-9f7a-88bdb9640344"
+        "id": "bKxwMFLHt96H"
       },
       "source": [
         "sal[sal['TotalPayBenefits'] == sal['TotalPayBenefits'].max()]"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Id</th>\n",
-              "      <th>EmployeeName</th>\n",
-              "      <th>JobTitle</th>\n",
-              "      <th>BasePay</th>\n",
-              "      <th>OvertimePay</th>\n",
-              "      <th>OtherPay</th>\n",
-              "      <th>Benefits</th>\n",
-              "      <th>TotalPay</th>\n",
-              "      <th>TotalPayBenefits</th>\n",
-              "      <th>Year</th>\n",
-              "      <th>Notes</th>\n",
-              "      <th>Agency</th>\n",
-              "      <th>Status</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>NATHANIEL FORD</td>\n",
-              "      <td>GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY</td>\n",
-              "      <td>167411.18</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>400184.25</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>567595.43</td>\n",
-              "      <td>567595.43</td>\n",
-              "      <td>2011.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>San Francisco</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   Id    EmployeeName  ...         Agency  Status\n",
-              "0   1  NATHANIEL FORD  ...  San Francisco     NaN\n",
-              "\n",
-              "[1 rows x 13 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kis108gludjf",
-        "outputId": "66d3c27b-fb89-40ca-a48f-f39ac7d778e7"
+        "id": "kis108gludjf"
       },
       "source": [
         "sal.groupby('Year').mean()['BasePay']"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Year\n",
-              "2011.0     63595.956517\n",
-              "2012.0     65436.406857\n",
-              "2013.0     69630.030216\n",
-              "2014.0    109518.466320\n",
-              "Name: BasePay, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 24
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gK6-zkjAu5vf",
-        "outputId": "513d4249-2bc1-4b49-fc8e-65b9bc7bb1c6"
+        "id": "gK6-zkjAu5vf"
       },
       "source": [
         "sum(sal[sal['Year'] == 2013]['JobTitle'].value_counts() == 1)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "202"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -364,40 +165,57 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 163
         },
         "id": "rnx3YPblwXZA",
-        "outputId": "2959178d-a255-40b0-c2d1-2f1c4ca79106"
+        "outputId": "50f5044f-b2de-40fc-c98b-038014a8b500"
       },
       "source": [
         "sum(sal['JobTitle'].apply(lambda x: chief_string(x)))"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "605"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 61
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-db4775bf0e4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'JobTitle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mchief_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'sal' is not defined"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lzpYr-W7xlCH"
+        "id": "lzpYr-W7xlCH",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "outputId": "19a9d37f-ee8b-45f6-e83a-e4454ce796e4"
       },
       "source": [
         "sal[sal['JobTitle'].apply(lambda x: chief_string(x))]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-6437ed61657b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'JobTitle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mchief_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'sal' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -413,71 +231,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
-        },
-        "id": "qG11JoLex_KA",
-        "outputId": "7e12e98e-acc2-45a9-804b-c5f2821204d4"
+        "id": "qG11JoLex_KA"
       },
       "source": [
         "sal[['Tamanho da string', 'TotalPayBenefits']].corr()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Tamanho da string</th>\n",
-              "      <th>TotalPayBenefits</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Tamanho da string</th>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>-0.048955</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>TotalPayBenefits</th>\n",
-              "      <td>-0.048955</td>\n",
-              "      <td>1.000000</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                   Tamanho da string  TotalPayBenefits\n",
-              "Tamanho da string           1.000000         -0.048955\n",
-              "TotalPayBenefits           -0.048955          1.000000"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 71
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
