Arrumando arquivos do Sigmoidal

--- a/Python/Sigmoidal/Escola Data Science/notebooks/Aula_018_Redução_de_Dimensionalidade_(Parte_1).ipynb
+++ b/Python/Sigmoidal/Escola Data Science/notebooks/Aula_018_Redução_de_Dimensionalidade_(Parte_1).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Aula 018 - Redução de Dimensionalidade (Parte 1).ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,23 +15,19 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "VmFwGfU9T3z3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "<a href=\"https://colab.research.google.com/github/alexapruiz/Projetos/blob/master/Aula_018_Redu%C3%A7%C3%A3o_de_Dimensionalidade_(Parte_1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qB2VIDLEOam6",
-        "colab_type": "text"
+        "id": "qB2VIDLEOam6"
       },
       "source": [
         "# Aula 018 - Redução de Dimensionalidade (Parte 1)\n",
@@ -43,9 +40,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N0Cus89qNFdF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "N0Cus89qNFdF"
       },
       "source": [
         "# importar as bibliotecas necessárias\n",
@@ -60,7 +55,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "uci175SINQ9R",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -98,8 +92,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QSL4dAK8Ns93",
-        "colab_type": "text"
+        "id": "QSL4dAK8Ns93"
       },
       "source": [
         "**E se eu tiver 100 variáveis independentes?**\n",
@@ -125,8 +118,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "721jn-VIPayb",
-        "colab_type": "text"
+        "id": "721jn-VIPayb"
       },
       "source": [
         "### Proporção de valores ausentes"
@@ -136,7 +128,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "_-O6PBNFOytf",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
@@ -552,7 +543,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "UYjQ-mtYQUSo",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
@@ -591,9 +581,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ImLmITjjQXBW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ImLmITjjQXBW"
       },
       "source": [
         "df_clean = df.drop(['roubo_bicicleta', 'roubo_bicicleta'], axis=1)"
@@ -604,9 +592,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K-0d8-UVUCaw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "K-0d8-UVUCaw"
       },
       "source": [
         "threshold = 0.6\n",
@@ -625,9 +611,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NY3-GFg9VM-m",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NY3-GFg9VM-m"
       },
       "source": [
         "df_clean = df[manter].copy()"
@@ -638,8 +622,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "y-cUcKCFRo9B",
-        "colab_type": "text"
+        "id": "y-cUcKCFRo9B"
       },
       "source": [
         "Algumas literaturas trazem como guideline, um *threshold* entre 60-75%.\n",
@@ -650,8 +633,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oOx8uN3SSGVA",
-        "colab_type": "text"
+        "id": "oOx8uN3SSGVA"
       },
       "source": [
         "### Filtro de baixa variância\n"
@@ -661,7 +643,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "9vRvrYB9Sjtu",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -777,7 +758,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZG1LMMK_WKQ3",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -895,9 +875,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UM-h_0nWSpOi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UM-h_0nWSpOi"
       },
       "source": [
         "df.drop('ID', axis=1, inplace=True)"
@@ -909,7 +887,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "yF47a76GVw5W",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145
@@ -945,7 +922,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "bWDmwUSwS1ri",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
@@ -988,7 +964,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "hMBw9LDWS2P6",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145
@@ -1024,9 +999,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z5TS4MRtV7Jg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z5TS4MRtV7Jg"
       },
       "source": [
         "threshold = 0.05\n",
@@ -1045,7 +1018,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "r5mWINbeXyG5",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1074,9 +1046,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1FlondWJXnP3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "1FlondWJXnP3"
       },
       "source": [
         "df_novo = df[manter]"
@@ -1087,8 +1057,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HnYp2fgkYaYu",
-        "colab_type": "text"
+        "id": "HnYp2fgkYaYu"
       },
       "source": [
         "Você deve devinir um threshold e também normalizar os dados antes de trabalhar com o filtro de baixa variância."
@@ -1097,8 +1066,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iYa0nYcGXn8f",
-        "colab_type": "text"
+        "id": "iYa0nYcGXn8f"
       },
       "source": [
         "## Filtro de alta correlação"
@@ -1108,7 +1076,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "h7E4Ug_wYGyM",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -1213,9 +1180,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nw3Na6VtZSaa",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nw3Na6VtZSaa"
       },
       "source": [
         "corr = df.drop('count', axis=1).corr()"
@@ -1227,7 +1192,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "5IjuQDp2Y6op",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 126
@@ -1263,9 +1227,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aVkY_tn4ZyKq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aVkY_tn4ZyKq"
       },
       "source": [
         ""
