Adicionando arquivos do Sigmoidal

--- a/Python/Sigmoidal/Escola Data Science/Aula_017_Clustering.ipynb
+++ b/Python/Sigmoidal/Escola Data Science/Aula_017_Clustering.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Aula 017 - Clustering",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,24 +15,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "ShFcg2yqhpc-",
         "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/alexapruiz/Projetos/blob/master/Aula_017_Clustering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ShFcg2yqhpc-"
       },
       "source": [
         "<p align=\"center\"><img src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/eds.png\" height=\"100px\"></p>\n",
         "\n",
         "# Clustering\n",
         "\n",
-        "O Spotify é um serviço de *streaming* de áudio, que está disponível em quase todos os países nas mais diversas plataformas. Ela tem por objetivo unir produtores e consumidores de músicas e podcasts, e uma plataforma eficiente, simples e prazerosa de se usar. Ao final de 2019, o Spotify contava com mais de 250 milhões de usuários.\n",
+        "O Spotify é um serviço de *streaming* de áudio, que está disponível em quase todos os países nas mais diversas plataformas. Ela tem por objetivo unir produtores e consumidores de músicas e podcasts, e uma plataforma eficiente, simples e prazeroza de se usar. Ao final de 2019, o Spotify contava com mais de 250 milhões de usuários.\n",
         "\n",
         "Como é de se imaginar, essa imensa popularidade entre artistas e ouvintes, o Spotify gera muitos dados, e faz muito bom uso desses dados, especialmente em seus sistemas de recomendação.\n",
         "\n",
@@ -55,7 +44,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5kREpv8Fn6fI"
+        "id": "5kREpv8Fn6fI",
+        "colab_type": "text"
       },
       "source": [
         "## O que é Clustering?\n",
@@ -76,7 +66,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OupqppAqqUc5"
+        "id": "OupqppAqqUc5",
+        "colab_type": "text"
       },
       "source": [
         "## Como Saber Quantos Clusters Preciso Usar?\n",
@@ -96,7 +87,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u3w6Ogy8ECia"
+        "id": "u3w6Ogy8ECia",
+        "colab_type": "text"
       },
       "source": [
         "## Informações Importantes Sobre K-Means\n",
@@ -119,7 +111,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WcUQxQY9LrrK"
+        "id": "WcUQxQY9LrrK",
+        "colab_type": "text"
       },
       "source": [
         "## Como Funciona O Algoritmo do Spotify?\n",
@@ -145,6 +138,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "YkitE3svmKlM",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -189,6 +183,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "k9K1rBZCQX6f",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -404,7 +399,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OuxqVf6HQ5EO"
+        "id": "OuxqVf6HQ5EO",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# selecionando as features numéricas\n",
@@ -421,6 +418,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "X6Gq_jbmRdtp",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -598,7 +596,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MlmsbxCVTbp1"
+        "id": "MlmsbxCVTbp1",
+        "colab_type": "text"
       },
       "source": [
         "Agora que os dados estão prontos, vamos descobrir quantos clusters precisaremos.\n",
@@ -610,6 +609,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "AKgPtC6_TltP",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 627
@@ -658,6 +658,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FPBiGyiwRXPW",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 627
@@ -706,6 +707,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "QMVjKDH8S915",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -731,6 +733,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KG1j5GgSR0zF",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -758,7 +761,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KhW_AU7QTy4z"
+        "id": "KhW_AU7QTy4z",
+        "colab_type": "text"
       },
       "source": [
         "Aparentemente, 6 é um bom número de Clusters.\n",
@@ -769,7 +773,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sKE1JFoZSVi0"
+        "id": "sKE1JFoZSVi0",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# instanciando o modelo\n",
@@ -783,6 +789,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "YZGSUU6lShzV",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 652
@@ -831,7 +838,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jGNwFgIdmG2I"
+        "id": "jGNwFgIdmG2I",
+        "colab_type": "text"
       },
       "source": [
         "## [Visualizar Os Clusters](https://plotly.com/~rafaelnduarte/1/)"
@@ -841,6 +849,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RCEhUYYYUyS6",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -884,6 +893,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Fra-xmtDVWAz",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -978,6 +988,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0J10X-a7VdUD",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
@@ -1194,6 +1205,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gm9BwEZwVjah",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 340
@@ -1242,6 +1254,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "bPOwpx6GVnV0",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -1279,6 +1292,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4vhXLeWMVsnI",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1315,6 +1329,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZEnXdnLuWJ7S",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 583
@@ -1644,7 +1659,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HFEuttzMW5BT"
+        "id": "HFEuttzMW5BT",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         ""
