--- a/Python/Sigmoidal/Escola Data Science/Aula_020_[PROJETO]_Data_Science_para_RH.ipynb
+++ b/Python/Sigmoidal/Escola Data Science/Aula_020_[PROJETO]_Data_Science_para_RH.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Aula 020 - [PROJETO] Data Science para RH",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,17 +16,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "cAsV9W7A2QAa",
         "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/alexapruiz/Projetos/blob/master/Aula_020_%5BPROJETO%5D_Data_Science_para_RH.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cAsV9W7A2QAa"
       },
       "source": [
         "<p align=\"center\"><img src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/eds.png\" height=\"100px\"></p>\n",
@@ -44,7 +34,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "h-mfdTc4C6M9"
+        "id": "h-mfdTc4C6M9",
+        "colab_type": "text"
       },
       "source": [
         "## Data Science para RH\n",
@@ -66,7 +57,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CsnBBfJ2HpPC"
+        "id": "CsnBBfJ2HpPC",
+        "colab_type": "text"
       },
       "source": [
         "## O Projeto\n",
@@ -79,7 +71,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "b1E9eDnapend",
-        "cellView": "form"
+        "colab_type": "code",
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title\n",
@@ -96,7 +90,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6oFAwI6k1y2S"
+        "id": "6oFAwI6k1y2S",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# importando os pacotes necessários\n",
@@ -124,7 +120,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wrdQ8G8DBBen"
+        "id": "wrdQ8G8DBBen",
+        "colab_type": "text"
       },
       "source": [
         "## Origem dos dados\n",
@@ -134,7 +131,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tTEOOrN22bDb"
+        "id": "tTEOOrN22bDb",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# importando os dados\n",
@@ -146,7 +145,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oSajwWiGBNcN"
+        "id": "oSajwWiGBNcN",
+        "colab_type": "text"
       },
       "source": [
         "## Dicionário de variáveis\n",
@@ -200,6 +200,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jtlREpDs-Z-Q",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -488,6 +489,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-Cl6TIf5-bWc",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 850
@@ -577,6 +579,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "I5ReSqodES7j",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
@@ -900,7 +903,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OvAq6iCo3aBo"
+        "id": "OvAq6iCo3aBo",
+        "colab_type": "text"
       },
       "source": [
         "### Insights\n",
@@ -915,6 +919,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "w-FD2tP-PQDx",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -1033,7 +1038,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4rjXsnmW4N-m"
+        "id": "4rjXsnmW4N-m",
+        "colab_type": "text"
       },
       "source": [
         "### Insights\n",
@@ -1052,7 +1058,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b1xvUOlv6eyH"
+        "id": "b1xvUOlv6eyH",
+        "colab_type": "text"
       },
       "source": [
         "## Igualdade de Gênero\n",
@@ -1067,6 +1074,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fOZ8JxRz5UXu",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -1108,6 +1116,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qXrfTp8T6Xif",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
@@ -1208,6 +1217,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "s-JGLAuf5_rO",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
@@ -1309,7 +1319,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_zsthKkP7KuC"
+        "id": "_zsthKkP7KuC",
+        "colab_type": "text"
       },
       "source": [
         "### Insights\n",
@@ -1320,7 +1331,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7baBF7Dm7seV"
+        "id": "7baBF7Dm7seV",
+        "colab_type": "text"
       },
       "source": [
         "### Variável Alvo\n",
@@ -1331,7 +1343,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9WMR2DuUHVb_"
+        "id": "9WMR2DuUHVb_",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# transformando a variável alvo\n",
@@ -1346,6 +1360,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TjYw2RRyHact",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -1639,7 +1654,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jPHgqNSn778S"
+        "id": "jPHgqNSn778S",
+        "colab_type": "text"
       },
       "source": [
         "## Gráfico de Densidade\n",
@@ -1655,6 +1671,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "M3i7LWbfF-zr",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1703,7 +1720,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qZquzCn8OWZF"
+        "id": "qZquzCn8OWZF",
+        "colab_type": "text"
       },
       "source": [
         "### Insights sobre os gráficos de densidade\n",
@@ -1728,6 +1746,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "kM2kgr1AGSa1",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -1778,7 +1797,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cdN3ftHJVmr7"
+        "id": "cdN3ftHJVmr7",
+        "colab_type": "text"
       },
       "source": [
         "#### Conclusões\n",
@@ -1791,7 +1811,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "D0Lb3onxY5pc"
+        "id": "D0Lb3onxY5pc",
+        "colab_type": "text"
       },
       "source": [
         "## Preparando os Dados para Machine Learning\n",
@@ -1807,6 +1828,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2H3QQ0Wrbdp1",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -2101,6 +2123,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "35ILxpLlb1lV",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -2387,7 +2410,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I9lkjVeP8jvY"
+        "id": "I9lkjVeP8jvY",
+        "colab_type": "text"
       },
       "source": [
         "#### Variáveis Categóricas"
@@ -2397,6 +2421,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Kw77zOmzeHkR",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
@@ -2690,7 +2715,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fl7s-mBV943k"
+        "id": "fl7s-mBV943k",
+        "colab_type": "text"
       },
       "source": [
         "#### Variáveis Numéricas"
@@ -2700,6 +2726,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "plcmjnY6gOhk",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
@@ -3000,7 +3027,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Gt2mqrZX-CH5"
+        "id": "Gt2mqrZX-CH5",
+        "colab_type": "text"
       },
       "source": [
         "### Separando o dataset em Treino e Teste\n",
@@ -3010,7 +3038,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "faVDqmutlgdd"
+        "id": "faVDqmutlgdd",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# separando o dataset\n",
@@ -3025,7 +3055,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rgPP4TO8-QlI"
+        "id": "rgPP4TO8-QlI",
+        "colab_type": "text"
       },
       "source": [
         "### Balanceando os dados\n",
@@ -3039,6 +3070,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q_zKWO-NnBXD",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -3099,7 +3131,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3AT7NDDDpprW"
+        "id": "3AT7NDDDpprW",
+        "colab_type": "text"
       },
       "source": [
         "## Machine Learning\n",
@@ -3120,7 +3153,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fIkUMhHXz7mI"
+        "id": "fIkUMhHXz7mI",
+        "colab_type": "text"
       },
       "source": [
         "### Regressão Logística\n",
@@ -3137,7 +3171,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Lt2pqsKIprJr"
+        "id": "Lt2pqsKIprJr",
+        "colab_type": "text"
       },
       "source": [
         "### Baseline Com Dados Não Balanceados\n",
@@ -3150,7 +3185,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5N8ijO8VoEmK"
+        "id": "5N8ijO8VoEmK",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# criando uma cópia dos dados desbalanceados\n",
@@ -3170,6 +3207,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "q5wIF2QDo2L-",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -3209,6 +3247,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wC5Nf3mjpEXx",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -3267,7 +3306,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pdujLl8uB2yW"
+        "id": "pdujLl8uB2yW",
+        "colab_type": "text"
       },
       "source": [
         "### Conclusões\n",
@@ -3280,7 +3320,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OSjANCgMp0YT"
+        "id": "OSjANCgMp0YT",
+        "colab_type": "text"
       },
       "source": [
         "### Dados Balanceados\n",
@@ -3292,6 +3333,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8ZhmBV4ArFaU",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -3340,6 +3382,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "m5OevH7xrXYK",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -3398,7 +3441,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AJwFpTIBDJQw"
+        "id": "AJwFpTIBDJQw",
+        "colab_type": "text"
       },
       "source": [
         "### Conclusões - Dados Balanceados\n",
@@ -3413,7 +3457,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6wo1p4DUz00T"
+        "id": "6wo1p4DUz00T",
+        "colab_type": "text"
       },
       "source": [
         "### Random Forest\n",
@@ -3431,6 +3476,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qdxL3Rgpvo56",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -3468,6 +3514,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lhWqJe_1vNIa",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -3528,7 +3575,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0wMu5Y150kgI"
+        "id": "0wMu5Y150kgI",
+        "colab_type": "text"
       },
       "source": [
         "### Variáveis Mais Importantes\n",
@@ -3538,7 +3586,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2PWtzGjntSqI"
+        "id": "2PWtzGjntSqI",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# calculando importância das features para Random Forest\n",
@@ -3555,6 +3605,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ePUiDf3jtg3E",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 729
@@ -3594,7 +3645,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rKf5VTjGzf4L"
+        "id": "rKf5VTjGzf4L",
+        "colab_type": "text"
       },
       "source": [
         "## Conclusões - Random Forest\n",
@@ -3620,7 +3672,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AbFpWYR_BjQd"
+        "id": "AbFpWYR_BjQd",
+        "colab_type": "text"
       },
       "source": [
         "## Possíveis Melhorias\n",
@@ -3634,7 +3687,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I1NEixM7B5x4"
+        "id": "I1NEixM7B5x4",
+        "colab_type": "text"
       },
       "source": [
         "# Regras do Desafio\n",
@@ -3653,7 +3707,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2_JZD_XtB4o5"
+        "id": "2_JZD_XtB4o5",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         ""
