--- a/Python/Sigmoidal/Escola Data Science/Aula_021_Data_Storytelling_com_Python.ipynb
+++ b/Python/Sigmoidal/Escola Data Science/Aula_021_Data_Storytelling_com_Python.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Aula 021 - Data Storytelling com Python.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,17 +16,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "MfY88dQkfacL",
         "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/alexapruiz/Projetos/blob/master/Aula_021_Data_Storytelling_com_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MfY88dQkfacL"
       },
       "source": [
         "# Aula 021 - Data Storytelling com Python e Matplotlib\n",
@@ -40,7 +30,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MZfOY8Z0fylz"
+        "id": "MZfOY8Z0fylz",
+        "colab_type": "text"
       },
       "source": [
         "## 1. Exemplo de um gráfico sem técnicas de Data Storytelling"
@@ -49,7 +40,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JTvz4TdkJp1f"
+        "id": "JTvz4TdkJp1f",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# importar as bibliotecas necessárias\n",
@@ -57,13 +50,15 @@
         "import numpy as np\n",
         "import matplotlib"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ieppy3UbKwQ5"
+        "id": "Ieppy3UbKwQ5",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# dados a serem plotados\n",
@@ -71,13 +66,14 @@
         "antes = [22, 37, 17, 15, 9]\n",
         "depois = [12, 10, 16, 33, 39] "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "mQ3fyFZ7bGce",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 393
@@ -108,7 +104,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -128,7 +124,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "E_NfqttFf35P"
+        "id": "E_NfqttFf35P",
+        "colab_type": "text"
       },
       "source": [
         "## 2. Exemplo de um gráfico com técnicas de Data Storytelling"
@@ -137,20 +134,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QRheBmzFf24u"
+        "id": "QRheBmzFf24u",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# configurar a visualização\n",
         "%matplotlib inline\n",
         "%config InlineBackend.figure_format = 'svg'"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t8UKLis0KVUK"
+        "id": "t8UKLis0KVUK",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# configurando parâmetros das fontes\n",
@@ -160,13 +161,15 @@
         "CINZA1, CINZA2, CINZA3= \"#CFCDCE\", \"#A2A1A3\", \"#787878\"\n",
         "AZUL1, AZUL2 = \"#8db7eb\", \"#253760\""
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iZZAA44xdxVn"
+        "id": "iZZAA44xdxVn",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# ajustes para construir o gráfico\n",
@@ -177,13 +180,14 @@
         "cores_antes = [CINZA1, CINZA1, CINZA1, CINZA3, CINZA3]\n",
         "cores_depois = [AZUL1, AZUL1, AZUL1, AZUL2, AZUL2]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "R6Iu7fDxMa9Z",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 375
@@ -270,7 +274,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
